--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -18,13 +18,13 @@
             {% csrf_token %}  <!-- ВКЛЮЧАЕМ РЕЖИМ ЗАЩИТЫ -->
             <p>
                 <label for="login">Логин:</label><br>
-                <input type="text" id="login" name="login" placeholder="Введите логин" required></input>
-                <img src=""/>
+                <input type="text" id="login" name="login" placeholder="Введите логин" required> </input>
+                <img id="login_img" width="24" src=""/>
                 <div id="login_err" class="err"></div>
             </p>
             <p>
                 <label for="pass1">Пароль:</label><br>
-                <input type="password" id="pass1" name="pass1" placeholder="Введите пароль" required></input>
+                <input type="password" id="pass1" name="pass1" placeholder="Введите пароль" required> </input>
                 <div id="pass1_err" class="err"></div>
             </p>
             <p style="text-align: center">
@@ -85,9 +85,20 @@
             $('#login').blur(function () {
                 let login = $(this).val();
                 if (regExp1.test(login)) {
-                    //$('#login_err').text('OK')
+                    //проверка занятости логина
+                    $.ajax({
+                        url:"add.php",
+                        data:"x=4&y=5",
+                        success:function(result){
+                            $("#par1").html(result)
+                        }
+                    });
+
+                    $('#login_img').attr('src', '../../static/img/ok.png');
+                    $('#login_err').text('');
                 } else {
-                    $(this).css('border-color', 'red')
+                    //$(this).css('border-color', 'red')
+                    $('#login_img').attr('src', '../../static/img/cross.png');
                     $('#login_err').text('Логин не может быть пустым и содержать символы!');
                 }
 
