--- a/templates/account/signin.html
+++ b/templates/account/signin.html
@@ -18,13 +18,13 @@
             {% csrf_token %}  <!-- ВКЛЮЧАЕМ РЕЖИМ ЗАЩИТЫ -->
             <p>
                 <label for="login">Логин:</label><br>
-                <input type="text" id="login" name="login" placeholder="Введите логин" required> </input>
+                <input type="text" id="login" name="login" placeholder="Введите логин" required> </p>
                 <img id="login_img" width="24" src=""/>
                 <div id="login_err" class="err"></div>
             </p>
             <p>
                 <label for="pass1">Пароль:</label><br>
-                <input type="password" id="pass1" name="pass1" placeholder="Введите пароль" required> </input>
+                <input type="password" id="pass1" name="pass1" placeholder="Введите пароль" required> </p>
                 <div id="pass1_err" class="err"></div>
             </p>
             <p style="text-align: center">
