--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -2,12 +2,12 @@
 
 
 {% block title %}
-    NewsPortal - Вход
+    NewsPortal - Профиль пользователя
 {% endblock title %}
 
 
 {% block header %}
-    Страница входа
+    Страница пользоваеля
 {% endblock header %}
 
 
