--- a/templates/account/signout.html
+++ b/templates/account/signout.html
@@ -15,6 +15,7 @@
     <div id="main_box" class="container">
         <h3>Выход</h3>
         <hr class="my_row">
+        <h5>Вы успешно вышли из системы!</h5>
     </div>
     <!-- селектор с # наз.-я id-селектор -->
     <style>
