разработка заготовки приложения Новости

--- a/templates/home/main.html
+++ b/templates/home/main.html
@@ -15,9 +15,15 @@
     <div id="logo" class="jumbotron">
     <div class="container">
         <h1 class="display-3", style="color:#ffffff"><b>НОВОСТИ МЕГАПОЛИСА</b></h1>
-            <p, style="color:#ffffff">Самые актуальные новости</p>
+            <p style="color:#ffffff">Самые актуальные новости</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Все новости &raquo;</a></p>
     </div>
+        <style>
+            .display-3{
+            color: #ffffff;
+            text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 40px #ffff00, 0 0 80px #ffff00, 0 0 90px #ffff00, 0 0 100px #ffff00, 0 0 150px #ffff00;
+            }
+        </style>
     </div>
     <div class="container">
     <!-- Example row of columns -->
