--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -14,7 +14,7 @@
 {% block content %}
     <div id="main_box" class="container">
         <h3>Регистрация</h3>
-        <form id="form1" method="post" action="/account/signup">
+        <form id="form1" method="post" action="/account/signup" onsubmit="return false">
             {% csrf_token %}  <!-- ВКЛЮЧАЕМ РЕЖИМ ЗАЩИТЫ -->
             <p>
                 <label for="login">Логин:</label><br>
@@ -38,8 +38,8 @@
                 <div id="pass2_err" class="err"></div>
             </p>
             <p style="text-align: center">
-                <input type="submit" value="Отправить" class="btn btn-primary">
-                <input type="reset" value="Очистить" class="btn btn-secondary">
+                <input id="submit" type="submit" value="Отправить" class="btn btn-primary">
+                <input id="reset" type="reset" value="Очистить" class="btn btn-secondary">
             </p>
         </form>
         <hr class="my_row">
